--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   "license": "ISC",
   "dependencies": {
     "react": "16.6.3",
-    "react-native": "^0.57.8"
+    "react-native": "^0.57.8",
+    "react-native-secp256k1": "git+https://github.com/fingera/react-native-secp256k1.git"
   },
   "devDependencies": {
     "babel-jest": "23.6.0",
